<resources>
    <string name="app_name">BigPizzaShop</string>
    <string name="pizza">Pizza</string>
    <string name="text1">Text1</string>
    <string name="text2">Text2</string>
    <string name="price">200</string>
    <string name="imagePizza">ImagePizza</string>
    <string name="Quantity">Кількість:</string>
    <string name="button">button</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="text_price">Ціна:</string>
    <string name="add_to_cart">Додати в корзину</string>
    <string name="_200">200</string>
    <string name="proteins">Білки</string>
    <string name="carbohydrates">Вуглеводи</string>
    <string name="fats">Жири</string>
    <string name="caloric_content">Калорійність</string>
</resources>
