<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewOnce"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:contentDescription="@string/pizza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameOfPizzaOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewOnce"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionOfPizzaOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewOnce"
            app:layout_constraintTop_toBottomOf="@+id/nameOfPizzaOnce" />

        <TextView
            android:id="@+id/priceOfPizzaOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
